--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
         </activity>
         <activity android:name=".login" />
         <activity android:name=".SignupActivity" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".DummyActivity"></activity>
     </application>
 
 </manifest>
