--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,11 +29,14 @@ dependencies {
     compile 'com.google.firebase:firebase-core:11.8.0'
     compile 'com.google.firebase:firebase-auth:11.8.0'
     compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-storage:11.8.0'
+    compile 'com.firebaseui:firebase-ui-database:0.4.0'
     compile 'com.google.android.gms:play-services-auth:11.8.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
 
 }
+
 
 
 
