added contact to author and cleared some glitches

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,8 @@
             android:theme="@style/AppTheme" />
         <activity android:name=".DummyActivity" />
         <activity android:name=".FeedActivity" />
-        <activity android:name=".MessActivity"></activity>
+        <activity android:name=".MessActivity" />
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
